Fix pagenav alignment

--- a/style.css
+++ b/style.css
@@ -1683,11 +1683,11 @@ Content
 		}
 
     .pagenav_link {
-    	display:block;
-        font-size:2.2rem;
-		font-family:'Source Sans Pro',sans-serif;
-		line-height:3.2rem;
-        text-decoration:none;
+      display:inline-block;
+      font-size:2.2rem;
+      font-family:'Source Sans Pro',sans-serif;
+      line-height:3.2rem;
+      text-decoration:none;
     }
 
 		#pagenav .alignleft .pagenav_link {
